Simplify scripts and update readme

--- a/GuiApp/snackAttackTrack.kv
+++ b/GuiApp/snackAttackTrack.kv
@@ -591,13 +591,13 @@
                 padding: 10
                 halign: 'center'
                 valign: 'middle'
-                text: 'This is Spook Station, a role-playing ghost-hunting tool. Its developed for game organizers (or Dungeon masters) to enhance the game experience to the next level by remotely activating and controlling connected ghost-hunting equipment.'
+                text: 'Snack Attack Track is a subscription/membership management software meant to run on a raspberry pi with a touchscreen.'
             Label:
                 text_size: self.size
                 markup: True
                 halign: 'center'
                 valign: 'middle'
-                text: '[b]Contributers[/b] \nDouglas Halse - Project Manager \nEmil Gårdh - User Interface \nRasmus Strångert - User Interface \nOlle Skog - Art Resource \nInga Lindow - Art Resource \nLinnéa Gistrand - User Interaction'     
+                text: '[b]Contributers[/b] \nDouglas Halse - Haver of ideas \nPhilip Tekin - Script maintainer'     
             
             BoxLayoutButton:
                 size_hint: (None, None)
