Add new snack screen

--- a/GuiApp/kv/editSnacksScreen.kv
+++ b/GuiApp/kv/editSnacksScreen.kv
@@ -41,6 +41,11 @@
                 height: '50dp'
             Label:
                 size_hint: 1, None
+                text: 'Price'
+                bold: True
+                height: '50dp'
+            Label:
+                size_hint: 1, None
                 text: 'Image ID'
                 bold: True
                 height: '50dp'
@@ -66,6 +71,11 @@
         height: '50dp'
     Label:
         id: snackQuantityLabel
+        text: 'Snack'
+        size_hint: 1, None
+        height: '50dp'
+    Label:
+        id: snackPriceLabel
         text: 'Snack'
         size_hint: 1, None
         height: '50dp'
