--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -11,3 +11,4 @@
 #:include kv/editSnacksScreen.kv
 #:include kv/headerBodyLayout.kv
 #:include kv/editUsersScreen.kv
+#:include kv/addSnackScreen.kv
