--- a/GuiApp/kv/splashScreen.kv
+++ b/GuiApp/kv/splashScreen.kv
@@ -3,7 +3,7 @@
 <SplashScreenWidget>:
     BoxLayoutButton:
         size_hint: 1, 1
-        on_press: root.manager.current = 'loginScreen'
+        on_press: root.OnScreenTouch()
         canvas:
             Color:
                 rgba: .9, .9, .9, 1
