Add top up amount screen

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -12,3 +12,4 @@
 #:include kv/headerBodyLayout.kv
 #:include kv/editUsersScreen.kv
 #:include kv/addSnackScreen.kv
+#:include kv/topUpAmountScreen.kv
