Add top up payment screen

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -13,3 +13,4 @@
 #:include kv/editUsersScreen.kv
 #:include kv/addSnackScreen.kv
 #:include kv/topUpAmountScreen.kv
+#:include kv/topUpPaymentScreen.kv
