Add back button

--- a/GuiApp/kv/headerBodyLayout.kv
+++ b/GuiApp/kv/headerBodyLayout.kv
@@ -62,6 +62,13 @@
     color: 'white'
     on_press: root.onPressed()
 
+<BackButton>:
+    width: '48dp'
+    size_hint_x: None
+    source: 'Images/leftArrow.png'
+    color: 'white'
+    on_press: root.onPressed()
+
 <HeaderBodyScreen>:
     canvas:
         Color:
