Handle logged in user centrally

--- a/GuiApp/kv/loginScreen.kv
+++ b/GuiApp/kv/loginScreen.kv
@@ -22,7 +22,7 @@
         color : [0,0,0,1]
         bold: True
     
-<LoginScreenWidget>:
+<LoginScreen>:
     GridLayout:
         cols: 1
         anchor_x: 'center'
