Add edit user screen

--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -29,6 +29,7 @@
             TextInput:
                 id: registerFirstName
                 hint_text: "First Name"
+                write_tab: False
                 size_hint_y: None
                 height: 40
                 padding: [10, 10]
@@ -36,6 +37,7 @@
             TextInput:
                 id: registerLastName
                 hint_text: "Last Name"
+                write_tab: False
                 size_hint_y: None
                 height: 40
                 padding: [10, 10]
@@ -43,6 +45,7 @@
             TextInput:
                 id: registerEmployeeID
                 hint_text: "Employee id, Blipp Card (Optional)"
+                write_tab: False
                 size_hint_y: None
                 height: 40
                 padding: [10, 10]
