Sanitize AddSnackScreen user input

--- a/GuiApp/kv/addSnackScreen.kv
+++ b/GuiApp/kv/addSnackScreen.kv
@@ -29,6 +29,7 @@
         TextInput:
             id: snackQuantityTextInput
             write_tab: False
+            input_filter: 'int'
             hint_text: "Enter number of snacks"
             size_hint_y: None
             height: 40
@@ -42,6 +43,7 @@
         TextInput:
             id: snackTotalPriceTextInput
             write_tab: False
+            input_filter: 'float'
             hint_text: "Enter total purchase price of snack"
             size_hint_y: None
             height: 40
