--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -18,3 +18,4 @@
 #:include kv/editUserScreen.kv
 #:include kv/historyScreen.kv
 #:include kv/editSnackScreen.kv
+#:include kv/purchaseCompletedPopup.kv
