--- a/GuiApp/kv/historyScreen.kv
+++ b/GuiApp/kv/historyScreen.kv
@@ -56,8 +56,14 @@
             ScrollView:
                 size_hint: 1, 1
                 do_scroll_x: False
-                id: historyScrollView
-    
+                GridLayout:
+                    id: historyScrollViewLayout
+                    cols: 1
+                    padding: "10dp"
+                    spacing: 10
+                    size_hint_y: None
+                    height: self.minimum_height
+        
 <HistoryEntry>:
     rows: 1
     size_hint_y: None
