Add purchase summary

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -20,3 +20,4 @@
 #:include kv/editSnackScreen.kv
 #:include kv/purchaseCompletedPopup.kv
 #:include kv/clickableTable.kv
+#:include kv/purchaseSummaryPopup.kv
