Implement generic clickable table

--- a/GuiApp/kv/buyScreen.kv
+++ b/GuiApp/kv/buyScreen.kv
@@ -1,63 +1,5 @@
 #:kivy 2.1.0
 
-<SnackList>:
-    rows: 1
-    spacing: 30
-    GridLayout:
-        cols: 1
-        spacing: 5
-        Label:
-            id: snackListHeading
-            text_size: self.size
-            size_hint_y: None
-            height: 20
-            text: "TEMP"
-            bold: True
-        GridLayout:
-            cols: 1
-            size_hint: 1, 1
-            canvas.after:
-                Color:
-                    rgba: .5, .5, .5, 1
-                Line:
-                    width: 2
-                    rectangle: self.x, self.y, self.width, self.height
-            GridLayout:
-                rows: 1
-                size_hint: 1, None
-                height: '50dp'
-                canvas.after:
-                    Color:
-                        rgba: .5, .5, .5, 1
-                    Line:
-                        width: 2
-                        rectangle: self.x, self.y, self.width, self.height
-                Label:
-                    size_hint: 1, None
-                    text: 'Snack name'
-                    bold: True
-                    height: '50dp'
-                Label:
-                    size_hint: 1, None
-                    text: 'Quantity'
-                    bold: True
-                    height: '50dp'
-                Label:
-                    size_hint: 1, None
-                    text: 'Price'
-                    bold: True
-                    height: '50dp'
-            ScrollView:
-                size_hint: 1, 1
-                do_scroll_x: False
-                GridLayout:
-                    id: snacksScrollViewLayout
-                    cols: 1
-                    padding: "10dp"
-                    spacing: 10
-                    size_hint_y: None
-                    height: self.minimum_height
-
 
 <BuyScreenContent>:
     cols: 1
@@ -70,10 +12,29 @@
             pos: self.pos
             size: self.size
     GridLayout:
-        id: shoppingItemSelection
         rows: 1
         spacing: 30
         size_hint: (1, 0.8)
+        GridLayout:
+            id: inventoryItemSelection
+            cols: 1
+            spacing: 5
+            Label:
+                text_size: self.size
+                size_hint_y: None
+                height: 20
+                text: "Inventory"
+                bold: True
+        GridLayout:
+            id: shoppingCartItemSelection
+            cols: 1
+            spacing: 5
+            Label:
+                text_size: self.size
+                size_hint_y: None
+                height: 20
+                text: "Shopping cart"
+                bold: True
     GridLayout:
         rows: 1
         size_hint: (1, 0.2)
@@ -118,29 +79,4 @@
                 text: 'Cancel'
                 size_hint: (1, 1)
     
-<SnackShoppingEntry>:
-    rows: 1
-    size_hint_y: None
-    height: '50dp'
-    on_press: root.onPress()
-    canvas.after:
-        Color:
-            rgba: .5, .5, .5, 1
-        Line:
-            width: 2
-            rectangle: self.x, self.y, self.width, self.height
-    Label:
-        id: snackNameLabel
-        text: 'Snack'
-        size_hint: 1, None
-        height: '50dp'
-    Label:
-        id: snackQuantityLabel
-        text: 'Snack'
-        size_hint: 1, None
-        height: '50dp'
-    Label:
-        id: snackPriceLabel
-        text: 'Snack'
-        size_hint: 1, None
-        height: '50dp'
+
