--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -19,3 +19,4 @@
 #:include kv/historyScreen.kv
 #:include kv/editSnackScreen.kv
 #:include kv/purchaseCompletedPopup.kv
+#:include kv/clickableTable.kv
