Add edit summary

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -21,3 +21,4 @@
 #:include kv/purchaseCompletedPopup.kv
 #:include kv/clickableTable.kv
 #:include kv/purchaseSummaryPopup.kv
+#:include kv/editSummaryPopup.kv
