--- a/GuiApp/kv/purchaseSummaryPopup.kv
+++ b/GuiApp/kv/purchaseSummaryPopup.kv
@@ -17,7 +17,7 @@
     halign: 'left'
     valign: 'middle'
 
-<PurchaseSummaryPopup@Popup>:
+<PurchaseSummaryPopup>:
     size_hint: (0.8, 0.9)
     auto_dismiss: True
     title: "Purchase summary"
