Add top up summary

--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -22,3 +22,4 @@
 #:include kv/clickableTable.kv
 #:include kv/purchaseSummaryPopup.kv
 #:include kv/editSummaryPopup.kv
+#:include kv/topUpSummaryPopup.kv
