--- a/GuiApp/kv/editUserScreen.kv
+++ b/GuiApp/kv/editUserScreen.kv
@@ -2,15 +2,15 @@
 
 <EditUserScreenContent>:
     cols: 1
-    size_hint: (1, 1)
+    padding: 20
+    spacing: 10
     GridLayout:
         cols: 1
-        size_hint: (1, 0.75)
-        padding: [120, 0, 120, 0]
+        padding: [150, 0]
         Label:
             text_size: self.size
             size_hint_y: None
-            height: 30
+            height: 20
             text: "First name"
             bold: True
         TextInput:
@@ -62,48 +62,21 @@
             padding: [10, 10]
     GridLayout:
         rows: 1
-        size_hint: (1, 0.25)
-        padding: [40, 10, 40, 10]
-        spacing: 20
-        BoxLayoutButton:
+        size_hint: (1, None)
+        height: self.minimum_height
+        padding: [20, 0]
+        MediumConfirmButton:
             on_press: root.onConfirm()
-            size_hint: (0.25, 1)
-            canvas:
-                Color:
-                    rgba: 0.0, 0.9, 0.0, 1
-                RoundedRectangle:
-                    pos: self.pos
-                    size: self.size
-            
-            Label:
-                text: 'Confirm'
-                size_hint: (1, 1)
-        BoxLayoutButton:
+        Widget: # Horizontal Spacer
+            size_hint: (1, None)
+            height: 75
+        MediumCancelButton:
             on_press: root.onCancel()
-            size_hint: (0.25, 1)
-            canvas:
-                Color:
-                    rgba: 0.5, 0.0, 0.0, 1
-                RoundedRectangle:
-                    pos: self.pos
-                    size: self.size
-            
-            Label:
-                text: 'Cancel'
-                size_hint: (1, 1)
-        BoxLayoutButton:
+        Widget: # Horizontal Spacer
+            size_hint: (1, None)
+            height: 75
+        MediumRemoveButton:
             on_press: root.onRemove()
-            size_hint: (0.25, 1)
-            canvas:
-                Color:
-                    rgba: 0.9, 0.0, 0.0, 1
-                RoundedRectangle:
-                    pos: self.pos
-                    size: self.size
-            
-            Label:
-                text: 'Remove'
-                size_hint: (1, 1)
 
 
 <RemoveUserConfirmationPopup>:
@@ -112,48 +85,27 @@
     size: (700,400)
     GridLayout:
         cols: 1
+        padding: 30
+        spacing: 30
         Label:
-            size_hint: (1, 0.5)
             id: areYouSureLabel
             text_size: self.size
-            size_hint_y: None
             font_size: 32
             halign: 'center'
+            valign: 'top'
             text: "Are you sure you want to \nremove FIRSTNAME?"
             bold: True
         GridLayout:
             rows: 1
-            size_hint: (1, 0.5)
-            padding: [40, 60, 40, 60]
-            spacing: 40
-            BoxLayoutButton:
+            size_hint: (1, None)
+            height: self.minimum_height
+            padding: [60, 0]
+            MediumCancelButton:
                 on_press: root.onCancel()
-                size_hint: (0.5, 1)
-                canvas:
-                    Color:
-                        rgba: 0.5, 0.0, 0.0, 1
-                    RoundedRectangle:
-                        pos: self.pos
-                        size: self.size
-                
-                Label:
-                    text: 'Cancel'
-                    bold: True
-                    font_size: 32
-                    size_hint: (1, 1)
-            BoxLayoutButton:
+            Widget: # Horizontal Spacer
+                size_hint: (1, None)
+                height: 75
+            MediumRemoveButton:
                 on_press: root.onRemove()
-                size_hint: (0.5, 1)
-                canvas:
-                    Color:
-                        rgba: 0.9, 0.0, 0.0, 1
-                    RoundedRectangle:
-                        pos: self.pos
-                        size: self.size
-                
-                Label:
-                    text: 'Remove'
-                    bold: True
-                    font_size: 32
-                    size_hint: (1, 1)
+            
             
