--- a/GuiApp/kv/addSnackScreen.kv
+++ b/GuiApp/kv/addSnackScreen.kv
@@ -7,75 +7,58 @@
     GridLayout:
         size_hint: (0.5, 1)
         cols:1
-        Label:
-            text_size: self.size
-            size_hint_y: None
-            height: 30
-            text: "Snack name"
-            bold: True
-        TextInput:
-            id: snackNameTextInput
-            write_tab: False
-            hint_text: "Enter snack name"
-            size_hint_y: None
-            height: 40
-            padding: [10, 10]
-        Label:
-            text_size: self.size
-            size_hint_y: None
-            height: 30
-            text: "Quantity"
-            bold: True
-        TextInput:
-            id: snackQuantityTextInput
-            write_tab: False
-            hint_text: "Enter number of snacks"
-            size_hint_y: None
-            height: 40
-            padding: [10, 10]
-        Label:
-            text_size: self.size
-            size_hint_y: None
-            height: 30
-            text: "Purchase price"
-            bold: True
-        TextInput:
-            id: snackTotalPriceTextInput
-            write_tab: False
-            hint_text: "Enter total purchase price of snack"
-            size_hint_y: None
-            height: 40
-            padding: [10, 10]
+        GridLayout:
+            cols: 1
+            Label:
+                text_size: self.size
+                size_hint_y: None
+                height: 30
+                text: "Snack name"
+                bold: True
+            TextInput:
+                id: snackNameTextInput
+                write_tab: False
+                hint_text: "Enter snack name"
+                size_hint_y: None
+                height: 40
+                padding: [10, 10]
+            Label:
+                text_size: self.size
+                size_hint_y: None
+                height: 30
+                text: "Quantity"
+                bold: True
+            TextInput:
+                id: snackQuantityTextInput
+                write_tab: False
+                hint_text: "Enter number of snacks"
+                size_hint_y: None
+                height: 40
+                padding: [10, 10]
+            Label:
+                text_size: self.size
+                size_hint_y: None
+                height: 30
+                text: "Purchase price"
+                bold: True
+            TextInput:
+                id: snackTotalPriceTextInput
+                write_tab: False
+                hint_text: "Enter total purchase price of snack"
+                size_hint_y: None
+                height: 40
+                padding: [10, 10]
         GridLayout:
             rows: 1
-            padding: [5, 60, 5, 0]
-            spacing: 20
-            BoxLayoutButton:
+            size_hint: (1, None)
+            height: self.minimum_height
+            SmallConfirmButton:
                 on_press: root.onConfirm()
-                size_hint: (0.5, 1)
-                canvas:
-                    Color:
-                        rgba: 0.0, 0.9, 0.0, 1
-                    RoundedRectangle:
-                        pos: self.pos
-                        size: self.size
-                
-                Label:
-                    text: 'Confirm'
-                    size_hint: (1, 1)
-            BoxLayoutButton:
+            Widget: # Horizontal Spacer
+                size_hint: (1, None)
+                height: 50
+            SmallCancelButton:
                 on_press: root.onCancel()
-                size_hint: (0.5, 1)
-                canvas:
-                    Color:
-                        rgba: 0.9, 0.0, 0.0, 1
-                    RoundedRectangle:
-                        pos: self.pos
-                        size: self.size
-                
-                Label:
-                    text: 'Cancel'
-                    size_hint: (1, 1)
 
     GridLayout:
         cols: 1
