--- a/GuiApp/kv/editSummaryPopup.kv
+++ b/GuiApp/kv/editSummaryPopup.kv
@@ -23,11 +23,10 @@
     title: "Edit summary"
     GridLayout:
         cols: 1
-        size_hint: (1, 1)
         padding: '10dp'
+        spacing: '10dp'
         GridLayout:
             cols: 1
-            size_hint: (1, 0.7)
             padding: [5, 0, 5, 0]
             spacing: 10
             GridLayout:
@@ -56,21 +55,8 @@
                     id: creditsAfterEditLabel
         GridLayout:
             rows: 1
-            size_hint: (1, 0.3)
-            padding: '10dp'
+            size_hint: (1, None)
+            height: self.minimum_height
             orientation: 'rl-tb'
-            BoxLayoutButton:
+            SmallCloseButton:
                 on_press: root.dismiss()
-                size_hint: (None, 1)
-                width: '180dp'
-                canvas:
-                    Color:
-                        rgba: 0.5, 0.0, 0.0, 1
-                    RoundedRectangle:
-                        pos: self.pos
-                        size: self.size
-                
-                Label:
-                    bold: True
-                    text: 'Close'
-                    size_hint: (1, 1)
