--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -23,3 +23,4 @@
 #:include kv/purchaseSummaryPopup.kv
 #:include kv/editSummaryPopup.kv
 #:include kv/topUpSummaryPopup.kv
+#:include kv/uiElements/buttons.kv
