--- a/GuiApp/kv/errorMessagePopup.kv
+++ b/GuiApp/kv/errorMessagePopup.kv
@@ -4,16 +4,22 @@
     id: errorMessagePopup
     title: 'Error'
     size_hint: (0.5, 0.5)
-    BoxLayout:
-        id: errorMessagePopupBox
-        orientation: 'vertical'
-        size_hint: (1, 1)
+    GridLayout:
+        cols: 1
+        padding: '10dp'
+        spacing: '10dp'
         Label:
             id: errorMessagePopupLabel
-            text: 'Error message'
-            size_hint: (1, 1)
-        Button:
-            id: errorMessagePopupButton
-            text: 'OK'
-            size_hint: (1, 1)
-            on_press: root.dismiss()
+            font_size: 18
+            text_size: self.size
+            halign: 'center'
+            valign: 'middle'
+            bold: True            
+            text: 'UNDEFINED'
+        GridLayout:
+            rows: 1
+            size_hint: (1, None)
+            height: self.minimum_height
+            orientation: 'rl-tb'
+            SmallCloseButton:
+                on_press: root.dismiss()
