Sanitize top up screen input

--- a/GuiApp/kv/topUpAmountScreen.kv
+++ b/GuiApp/kv/topUpAmountScreen.kv
@@ -41,6 +41,7 @@
                 id: creditsToAdd
                 write_tab: False
                 hint_text: "Enter amount"
+                input_filter: "float"
                 size_hint_y: None
                 height: 40
                 padding: [10, 10]
