Sanitize user input in edit user screen

--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -46,6 +46,7 @@
                 id: registerEmployeeID
                 hint_text: "Employee id, Blipp Card (Optional)"
                 write_tab: False
+                disabled: True
                 size_hint_y: None
                 height: 40
                 padding: [10, 10]
