--- a/GuiApp/kv/editUserScreen.kv
+++ b/GuiApp/kv/editUserScreen.kv
@@ -44,6 +44,7 @@
             write_tab: False
             hint_text: "CREDITS"
             size_hint_y: None
+            input_filter: "float"
             height: 40
             padding: [10, 10]
         Label:
